# agentic-os-public-alpha

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  public-release-manifest.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: test.yml
docs/: demo.md  distribution-channels.md  distribution.md  install-for-beginners.md  memory-workflows.md  onboarding-package.md  operations.md  public-release.md  readme-ja.md  readme-ko.md  role-tutorials.md  troubleshooting.md  user-validation.md
scripts/: fresh_user_smoke.py  install.ps1  install.sh  manage_global_aos.py  readiness_smoke.py  release_upgrade_smoke.py  windows_install_smoke.py
src/agentic_os/: bootstrap.py  cli.py  compiler.py  distribution.py  doctor.py  fresh_user_smoke.py  memory.py  memory_index.py  onboarding_check.py  paths.py  project.py  public_audit.py  public_export.py  public_release_gate.py  readiness.py  release_check.py  release_install_smoke.py  release_manifest.py  version.py  (+5 more)
tests/: test_bootstrap.py  test_cli_commands.py  test_cli_parser.py  test_compiler.py  test_distribution_artifacts.py  test_distribution_check.py  test_doctor.py  test_end_to_end.py  test_fresh_user_smoke.py  test_global_readiness.py  test_installation_manager.py  test_memory.py  test_memory_index.py  test_project.py  test_public_release.py  test_public_release_gate.py  test_release_check.py  test_release_install_smoke.py  test_release_manifest.py  test_release_upgrade_smoke.py  test_reliability.py  test_scaffold.py  test_security.py  test_windows_install_smoke.py
