[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-os"
version = "0.1.12"
description = "Local file-based Agentic OS MVP"
requires-python = ">=3.10"

[project.scripts]
aos = "agentic_os.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
